--- a/index.html
+++ b/index.html
@@ -922,25 +922,59 @@
         const modal = new bootstrap.Modal(document.getElementById('imageModal'));
         const modalImage = document.getElementById('modalImage');
 
+
+        // Intersection Observer 사용
+        const observer = new IntersectionObserver((entries, obs) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+            const img = entry.target;
+            img.src = img.dataset.src;
+            obs.unobserve(img);
+            }
+        });
+        }, {
+        rootMargin: "100px" // 미리 로딩
+        });
+
         function renderImages() {
             const slice = allImages.slice(shownCount, shownCount + perLoad);
+            const fragment = document.createDocumentFragment(); // DOM Fragment 사용
+
             slice.forEach((src, idx) => {
+                const img = new Image();
+                img.dataset.src = src;
+                img.src = ""; // 미리 로딩되지 않도록 빈 값
+                img.loading = "lazy";
+                img.decoding = "async";
+                observer.observe(img);
+                img.alt = "";
+                img.className = "img-fluid w-100";
+                img.dataset.index = shownCount + idx;
+
                 const col = document.createElement('div');
                 col.className = 'col-4 extra-gallery no-gap';
-                col.innerHTML = `<img src="${src}" alt="" data-index="${shownCount + idx}" class="img-fluid w-100" loading="lazy">`;
-                galleryGrid.appendChild(col);
+                col.appendChild(img);
+                fragment.appendChild(col);
             });
+
+            // 빠른 DOM 삽입
+            galleryGrid.appendChild(fragment);
+
             shownCount += slice.length;
+
             if (shownCount >= allImages.length) loadMoreBtn.style.display = 'none';
             if (shownCount > perLoad) foldBtn.style.display = 'inline-block';
         }
 
         function resetGallery() {
-            galleryGrid.innerHTML = '';
-            shownCount = 0;
-            renderImages();
-            loadMoreBtn.style.display = 'inline-block';
-            foldBtn.style.display = 'none';
+            // 성능 최적화를 위해 requestAnimationFrame 사용
+            window.requestAnimationFrame(() => {
+                galleryGrid.innerHTML = '';
+                shownCount = 0;
+                renderImages();
+                loadMoreBtn.style.display = 'inline-block';
+                foldBtn.style.display = 'none';
+            });
         }
 
         renderImages();
