--- a/index.html
+++ b/index.html
@@ -538,6 +538,14 @@
                             </div>
                             <div class="modal-body section7-modal section7-modal-content">
                                 신랑 혼주 : 기업 356-011-775-02-011 김승목
+                                <button class="copy-btn" data-account="기업 356-011-775-02-011 김승목">
+                                <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"
+                                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
+                                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+                                </svg>
+                                복사하기
+                                </button>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
@@ -562,6 +570,14 @@
                             </div>
                             <div class="modal-body section7-modal section7-modal-content">
                                 신부 혼주 : 카카오뱅크 7979-79-13360 이호선
+                                <button class="copy-btn" data-account="카카오뱅크 7979-79-13360 이호선">
+                                <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"
+                                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
+                                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+                                </svg>
+                                복사하기
+                                </button>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
@@ -1002,6 +1018,48 @@
             }
         });
     </script>
+    <script>
+        document.addEventListener('click', function (e) {
+            if (e.target.classList.contains('copy-btn')) {
+                const text = e.target.getAttribute('data-account');
+
+                // Clipboard API 사용
+                if (navigator.clipboard && window.isSecureContext) {
+                    navigator.clipboard.writeText(text).then(() => {
+                        showCopyToast();
+                    }).catch(err => {
+                        console.error("복사 실패:", err);
+                    });
+                } else {
+                    // fallback: execCommand 방식 (HTTP 환경 or 구형 브라우저)
+                    const tempInput = document.createElement('textarea');
+                    tempInput.value = text;
+                    document.body.appendChild(tempInput);
+                    tempInput.focus();
+                    tempInput.select();
+                    try {
+                        const success = document.execCommand('copy');
+                        if (success) showCopyToast();
+                        else alert("복사 실패");
+                    } catch (err) {
+                        alert("복사 실패");
+                    }
+                    document.body.removeChild(tempInput);
+                }
+            }
+        });
+
+        function showCopyToast() {
+            const toast = document.getElementById('copy-toast');
+            toast.classList.add('show');
+            setTimeout(() => {
+                toast.classList.remove('show');
+            }, 2000);
+        }
+    </script>
+
+
+    <div id="copy-toast">📋 계좌번호가 복사되었습니다!</div>
 
 </body>
 
