--- a/index.html
+++ b/index.html
@@ -537,7 +537,8 @@
                                 </button>
                             </div>
                             <div class="modal-body section7-modal section7-modal-content">
-                                신랑 혼주 : 기업 356-011-775-02-011 김승목
+                                <img class="bank-icon" src="./img/ibk.png" alt="IBK 기업은행">
+                                <span class="account-text">기업은행 356-011-775-02-011 김승목</span><br>
                                 <button class="copy-btn" data-account="기업 356-011-775-02-011 김승목">
                                 <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"
                                     stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
@@ -569,7 +570,8 @@
                                 </button>
                             </div>
                             <div class="modal-body section7-modal section7-modal-content">
-                                신부 혼주 : 카카오뱅크 7979-79-13360 이호선
+                                <img class="bank-icon" src="./img/kakaobank.png" alt="카카오뱅크">
+                                <span class="account-text">카카오뱅크 7979-79-13360 이호선</span><br>
                                 <button class="copy-btn" data-account="카카오뱅크 7979-79-13360 이호선">
                                 <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"
                                     stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
