--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://seungmokandhoseon.github.io/" />
     <meta property="og:title" content="김승목 ❤️ 이호선 결혼식에 초대합니다." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://seungmokandhoseon.github.io/img/11.jpg" />
+    <meta property="og:image" content="https://seungmokandhoseon.github.io/img/header.jpg" />
     <meta property="og:image:width" content="552" />
     <meta property="og:image:height" content="800" />
     <meta property="og:description" content="사랑으로 물들어가는 계절, 연인에서 부부라는 이름으로 평생을 함께 하고자 합니다." />
@@ -760,7 +760,10 @@
             { thumb: 'img/thumbs/15.jpg', full: 'img/15.jpg' },
             { thumb: 'img/thumbs/16.jpg', full: 'img/16.jpg' },
             { thumb: 'img/thumbs/17.jpg', full: 'img/17.jpg' },
-            { thumb: 'img/thumbs/18.jpg', full: 'img/18.jpg' }
+            { thumb: 'img/thumbs/18.jpg', full: 'img/18.jpg' },
+            { thumb: 'img/thumbs/19.jpg', full: 'img/19.jpg' },
+            { thumb: 'img/thumbs/20.jpg', full: 'img/20.jpg' },
+            { thumb: 'img/thumbs/21.jpg', full: 'img/21.jpg' }
         ];
 
         let currentIndex = 0;
