--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </header>
         <main role="main" class="inner">
             <div class="wow fadeInUp"><br>
-                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.svg">
+                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" style="width:154px;margin-top:10px;">
                 <p class="top-title">김승목 ❤️ 이호선</p>
 
 
@@ -277,6 +277,7 @@
                 축하해 주시는<br />
                 모든 분들에게
             </p>
+                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" style="width:154px;margin-top:10px;">
             <div class="wow fadeInUp">
                 <p class="section1-title section1-sub">
                     사랑으로 물들어가는 계절,<br />
@@ -298,7 +299,6 @@
             <hr class="cover-container" />
             <br />
             <div class="gallery-container container">
-
                 <p class="wow fadeInUp section3-title section3-main">Gallery</p>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="gallery-grid"></div>
                 <div class="text-center mt-3">
@@ -328,6 +328,7 @@
 
             <div class="wow fadeInUp">
                 <br /><br />
+                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" style="width:154px;margin-top:10px;">
                 <div class="container section4-title">
                     <div class="row">
                         <div class="col-6 section4-sec1-2">
@@ -558,8 +559,9 @@
                 <!--<p class="wow fadeInUp section5-title section5-sub" style="margin-top:1.3em">명운 ❤️ 재은 결혼식이 <span id="d-day"></span>일 남았습니다.</p>-->
                 <br /><br />
             </div>
-            <div class="wow fadeInUp inner cover-container d-flex w-100 h-100 mx-auto flex-column">
                 <br /><br />
+                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" style="width:154px;margin-top:10px;">
+            <div class="wow fadeInUp inner cover-container d-flex w-100 h-100 mx-auto flex-column">
                 <p class="wow fadeInUp section6-title section6-main">Location</p>
                 <div class="wow fadeInUp  section6-title">
                     <p class="section6-location-main" style="margin-bottom: 0;">소풍컨벤션웨딩홀 7층 베일리홀</p>
